# dmarc_report

./: CHANGELOG.md  README-mta-sts.md  README-tls.rst  README.md  README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  Readme-TLS.rst  conf.py  index.rst
Docs/Misc/: Contributing.rst
Docs/_build/doctrees/: Changelog.doctree  Code-of-conduct.doctree  Contributing.doctree  License.doctree  README.doctree  Readme-TLS.doctree  environment.pickle  index.doctree
Docs/_build/html/: .buildinfo  Changelog.html  Code-of-conduct.html  Contributing.html  License.html  README.html  Readme-TLS.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Docs/_build/html/License/: License.html
Docs/_build/html/_sources/: README.rst.txt  Readme-TLS.rst.txt  index.rst.txt
Docs/_build/html/_static/: documentation_options.js
Docs/_build/latex/: dmarc_report.aux  dmarc_report.fdb_latexmk  dmarc_report.fls  dmarc_report.ilg  dmarc_report.out  dmarc_report.tex  dmarc_report.toc
configs/: config.sample
packaging/: Changelog  PKGBUILD  requirements.txt
scripts/: check-source  do-install
src/dmarc_report/: __about__.py  __init__.py  _version.py  dmarc-rpt.py  tls-rpt.py
src/dmarc_report/dmarc/: __init__.py  _class_dmarc.py  class_dmarc.py  dmarc_analyze.py  report.py  report_colors.py
src/dmarc_report/lib/: __init__.py  cidr.py  class_dmarc.py  class_options.py  class_print.py  class_tls.py  class_tls_options.py  class_tlsrpt.py  color_pick.py  config.py  dmarc_analyze.py  email.py  json_tools.py  report.py  report_colors.py  save_input_files.py  tls_analyze.py  tls_report.py  tls_report_generate.py  tls_update.py  toml.py  utils.py  xml_tools.py
src/dmarc_report/tls/: _class_tls.py  class_tls.py  class_tlsrpt.py  tls_analyze.py  tls_report_generate.py  tls_update.py
src/dmarc_report/utils/: class_options.py  class_print.py  color_pick.py  config.py  email.py  json_tools.py  save_input_files.py  toml.py  tools.py  xml_tools.py
src/dmarc_rpt/: __init__.py
src/dmarc_rpt/apps/: dmarc-rpt.py  tls-rpt.py
src/dmarc_rpt/dmarc/: _class_dmarc.py  class_dmarc.py  dmarc_analyze.py  report.py  report_colors.py
src/dmarc_rpt/lib/: dmarc_analyze.py
src/dmarc_rpt/tls/: __init__.py  _class_tls.py  class_tls.py  class_tlsrpt.py  tls_analyze.py  tls_report_generate.py  tls_update.py
src/dmarc_rpt/utils/: __init__.py  class_options.py  class_print.py  color_pick.py  config.py  email.py  json_tools.py  save_input_files.py  toml.py  tools.py  version.py  xml_tools.py
