[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmarc_report"
dynamic = ["version"]
description = "Generate human readable DMARC and TLS reports from standard email reports."
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/dmarc_report/Docs"
Issues = "https://github.com/gene-git/dmarc_report/issues"
Source = "https://github.com/gene-git/dmarc_report"

[tool.hatch.version]
path = "src/dmarc_report/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

