[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmarc_report"
dynamic = ["version"]
description = "Generate human readable DMARC and TLS reports from standard email reports."
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/dmarc_report"]
include = [
    "src/dmarc_report",
]

[project.urls]
Documentation = "https://github.com/gene-git/dmarc_report/Docs"
Issues = "https://github.com/gene-git/dmarc_report/issues"
Source = "https://github.com/gene-git/dmarc_report"

[tool.hatch.version]
path = "src/dmarc_report/_version.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.13", "3.14", "3.15"]

